--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://www.notion.so/b6fcf809ca5047b89f423948dce013a0?v=03ddc4d6130a47f8b68e74c9d0061de2",
+  "url": "https://www.notion.so/60917972fbbd49c7a2d5767e909eb545?v=925c8b86c8324a57806054a49b589ad9&pvs=4",
   "theme": "pure-ejs",
   "previewBrowser": "/usr/bin/chromium",
   "autoSlug": true
