--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@
             uses: actions/checkout@v2
           # 1、生成静态文件
           - name: Build
-            run: npm i -g notablog && notablog generate ./public
+            run: npm i -g notablog && notablog generate .
           # 2、部署到 GitHub Pages
           - name: Deploy
             uses: JamesIves/github-pages-deploy-action@v4.2.5
@@ -29,4 +29,4 @@
               token: ${{ secrets.ACCESS_TOKEN }}
               repository-name: humbornjo/humbornjo.github.io
               BRANCH: master
-              FOLDER: public
+              FOLDER: .
