--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@
               token: ${{ secrets.ACCESS_TOKEN }}
               repository-name: humbornjo/humbornjo.github.io
               BRANCH: master
-              FOLDER: .
+              FOLDER: public
