--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@
             uses: actions/checkout@v2
           # 1、生成静态文件
           - name: Build
-            run: npm i -g notablog && notablog generate .
+            run: npm i -g notablog && notablog generate ./public
           # 2、部署到 GitHub Pages
           - name: Deploy
             uses: JamesIves/github-pages-deploy-action@v4.2.5
