--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://www.notion.so/60917972fbbd49c7a2d5767e909eb545?v=925c8b86c8324a57806054a49b589ad9&pvs=4",
+  "url": "https://ywj1352.notion.site/a6027a2ea4754ea7ba9149517dfd4fa0",
   "theme": "pure-ejs",
   "previewBrowser": "/usr/bin/chromium",
   "autoSlug": true
